overlays/uksouth-sandbox/olympus/docs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: docs-basic-auth
  namespace: olympus
spec:
  basicAuth:
    secret: ingress-docs-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs.${cluster_name}.${cluster_location}.bink.sh
  namespace: olympus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`docs.${cluster_name}.${cluster_location}.bink.sh`)
      services:
        - kind: Service
          name: docs
          port: 80
      middlewares:
        - name: docs-basic-auth
